# simplex

./: .gitignore  README.md  pyproject.toml
src/: __main__.py  interface.py  interior_point.py  lpp.py  simplex.py  transportation.py
tests/: conftest.py  test_simplex.py
