[tool.poetry]
name = "simplex"
version = "0.1.0"
description = ""
authors = ["Ruslan Bel'kov <ruslan.belckov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
pulp = "^2.7.0"
black = "^23.9.1"
numpy = "^1.26.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
