[tool.poetry]
name = "simplex"
version = "0.1.0"
description = ""
authors = ["Ruslan Bel'kov <ruslan.belckov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
numpy = "^1.26.0"
pandas = "^2.1.1"
black = "^23.10.0"
colorama = "^0.4.6"


[tool.poetry.group.tests.dependencies]
scipy = "^1.11.3"
pytest = "^7.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
